add @NotNull and @Nullable